syntax = "proto3";

                 package clearanceDeclaration;
service ClearanceDeclarationService {
 rpc createClearanceDeclaration (ClearanceDeclarationCreateInput) returns (ClearanceDeclaration) {}
rpc clearanceDeclarations (findManyParams) returns (stream ClearanceDeclaration) {}
rpc clearanceDeclaration (ClearanceDeclarationWhereUniqueInput) returns (ClearanceDeclaration) {}
rpc updateClearanceDeclaration (ClearanceDeclarationUpdateInput) returns (ClearanceDeclaration) {}
rpc deleteClearanceDeclaration (ClearanceDeclarationWhereUniqueInput) returns (ClearanceDeclaration) {} 
 }
message ClearanceDeclarationCreateInput {
int32 aditTxQty = 1;
string aditTxQtyUtCd = 2;
int32 alNtwg = 3;
int32 alTtwg = 4;
string apcAtpmEndDt = 5;
string apcAtpmStrtDt = 6;
string apcCd = 7;
string arvlDt = 8;
string bfBnbnCmdtWrhsCd = 9;
string bfDtlDcshDt = 10;
string bfDtlDcshNo = 11;
string bfPdlsNo = 12;
string blDt = 13;
string blNo = 14;
string bnbnCmdtWrhsCd = 15;
string brndNm = 16;
string cagMgmtNo = 17;
string cmdtClsfSpelCd = 18;
string cmdtStgeLoctCd = 19;
string cntrCagYn = 20;
int32 cntrGcnt = 21;
string createdAt = 22;
string csclPlnCd = 23;
string csmCntyCd = 24;
string dcerCd = 25;
string dcerWrteCn = 26;
string dclrCstmCd = 27;
string dclrPtCd = 28;
string dcrdYn = 29;
string dcshFmCd = 30;
string delYn = 31;
string deptCd = 32;
string disprCd = 33;
string divdCsclTpCd = 34;
string divdFfmnTpCd = 35;
string dlngCond1Cd = 36;
string dlngCond2Cd = 37;
string dlngPdlsNm = 38;
string dlngPymnMeanCd = 39;
string dlvrCondCd = 40;
string dlvrPlcCd = 41;
string dstnCntyCd = 42;
string dstnRegnCd = 43;
string dtlDcshNo = 44;
string epcCd = 45;
string expCntyCd = 46;
string exppnCmrcRegsNo = 47;
string exppnIdfyNo = 48;
string exppnIdfyNoTpCd = 49;
string frstDclrDt = 50;
string frstRegstId = 51;
string frstRgsrDttm = 52;
string hsCd = 53;
string hsErrPvntVal = 54;
string hsExcpMtrCd = 55;
string id = 56;
string imppnCmrcRegsNo = 57;
string imppnIdfyNo = 58;
string imppnIdfyNoTpCd = 59;
string invcNo = 60;
string invcPblsDt = 61;
string lastChgDttm = 62;
string lastChprId = 63;
string lastYn = 64;
string ldnpCd = 65;
string ldunDt = 66;
int32 mdfyDgcnt = 67;
string mdfyRsnCd = 68;
string mdfyRsnCn = 69;
string mgDscnApreNo = 70;
string nwprScarCmdtCd = 71;
string oilTankNo = 72;
string orcyCntyCd = 73;
string owhsPrcEvYn = 74;
string pckgDesc = 75;
string pckgShmrMarkNo = 76;
int32 pckgTgcnt = 77;
string pdlsClsfBfhnJdgnPn = 78;
int32 pdlsGcnt = 79;
string pdlsNm = 80;
string pdlsNo = 81;
int32 pdlsNtwg = 82;
int32 pdlsPckgGcnt = 83;
string pdlsPckgUtCd = 84;
int32 pdlsTtwg = 85;
string prcDcshWrteYn = 86;
string prcDtrmMeanCd = 87;
string prhbCmdtCd = 88;
string prmsntDt = 89;
string prmsntSttsCd = 90;
string prvlCd = 91;
int32 psmgtFfmnXpirPrid = 92;
string psnrPrcsCn = 93;
string psnrReffNo = 94;
string pymnAcNo = 95;
string pymnBnkBrnhCd = 96;
string pymnBnkCd = 97;
string pymnMeanCd = 98;
string qtaApreNo = 99;
int32 qty = 100;
string qtyUtCd = 101;
string refNo = 102;
string reffNo = 103;
string regmRqstCd = 104;
int32 rethink = 105;
string rlbrCstmCd = 106;
string rqstDt = 107;
string shipNm = 108;
int32 sysUseSs = 109;
string trdeDlngCntyCd = 110;
string trifBaseVal = 111;
string trnpMethIdfyNo = 112;
string trnpMethKndCd = 113;
string trnpMethNatCd = 114;
string txprCmrcRegsNo = 115;
string txprIdfyNo = 116;
string updatedAt = 117;
string uprPdlsNo = 118;
string vhclYn = 119;
string wkngPtCd = 120;
};
message ClearanceDeclaration {
int32 aditTxQty = 1;
string aditTxQtyUtCd = 2;
int32 alNtwg = 3;
int32 alTtwg = 4;
string apcAtpmEndDt = 5;
string apcAtpmStrtDt = 6;
string apcCd = 7;
string arvlDt = 8;
string bfBnbnCmdtWrhsCd = 9;
string bfDtlDcshDt = 10;
string bfDtlDcshNo = 11;
string bfPdlsNo = 12;
string blDt = 13;
string blNo = 14;
string bnbnCmdtWrhsCd = 15;
string brndNm = 16;
string cagMgmtNo = 17;
string cmdtClsfSpelCd = 18;
string cmdtStgeLoctCd = 19;
string cntrCagYn = 20;
int32 cntrGcnt = 21;
string createdAt = 22;
string csclPlnCd = 23;
string csmCntyCd = 24;
string dcerCd = 25;
string dcerWrteCn = 26;
string dclrCstmCd = 27;
string dclrPtCd = 28;
string dcrdYn = 29;
string dcshFmCd = 30;
string delYn = 31;
string deptCd = 32;
string disprCd = 33;
string divdCsclTpCd = 34;
string divdFfmnTpCd = 35;
string dlngCond1Cd = 36;
string dlngCond2Cd = 37;
string dlngPdlsNm = 38;
string dlngPymnMeanCd = 39;
string dlvrCondCd = 40;
string dlvrPlcCd = 41;
string dstnCntyCd = 42;
string dstnRegnCd = 43;
string dtlDcshNo = 44;
string epcCd = 45;
string expCntyCd = 46;
string exppnCmrcRegsNo = 47;
string exppnIdfyNo = 48;
string exppnIdfyNoTpCd = 49;
string frstDclrDt = 50;
string frstRegstId = 51;
string frstRgsrDttm = 52;
string hsCd = 53;
string hsErrPvntVal = 54;
string hsExcpMtrCd = 55;
string id = 56;
string imppnCmrcRegsNo = 57;
string imppnIdfyNo = 58;
string imppnIdfyNoTpCd = 59;
string invcNo = 60;
string invcPblsDt = 61;
string lastChgDttm = 62;
string lastChprId = 63;
string lastYn = 64;
string ldnpCd = 65;
string ldunDt = 66;
int32 mdfyDgcnt = 67;
string mdfyRsnCd = 68;
string mdfyRsnCn = 69;
string mgDscnApreNo = 70;
string nwprScarCmdtCd = 71;
string oilTankNo = 72;
string orcyCntyCd = 73;
string owhsPrcEvYn = 74;
string pckgDesc = 75;
string pckgShmrMarkNo = 76;
int32 pckgTgcnt = 77;
string pdlsClsfBfhnJdgnPn = 78;
int32 pdlsGcnt = 79;
string pdlsNm = 80;
string pdlsNo = 81;
int32 pdlsNtwg = 82;
int32 pdlsPckgGcnt = 83;
string pdlsPckgUtCd = 84;
int32 pdlsTtwg = 85;
string prcDcshWrteYn = 86;
string prcDtrmMeanCd = 87;
string prhbCmdtCd = 88;
string prmsntDt = 89;
string prmsntSttsCd = 90;
string prvlCd = 91;
int32 psmgtFfmnXpirPrid = 92;
string psnrPrcsCn = 93;
string psnrReffNo = 94;
string pymnAcNo = 95;
string pymnBnkBrnhCd = 96;
string pymnBnkCd = 97;
string pymnMeanCd = 98;
string qtaApreNo = 99;
int32 qty = 100;
string qtyUtCd = 101;
string refNo = 102;
string reffNo = 103;
string regmRqstCd = 104;
int32 rethink = 105;
string rlbrCstmCd = 106;
string rqstDt = 107;
string shipNm = 108;
int32 sysUseSs = 109;
string trdeDlngCntyCd = 110;
string trifBaseVal = 111;
string trnpMethIdfyNo = 112;
string trnpMethKndCd = 113;
string trnpMethNatCd = 114;
string txprCmrcRegsNo = 115;
string txprIdfyNo = 116;
string updatedAt = 117;
string uprPdlsNo = 118;
string vhclYn = 119;
string wkngPtCd = 120;
};
message ClearanceDeclarationWhereUniqueInput {
int32 aditTxQty = 1;
string aditTxQtyUtCd = 2;
int32 alNtwg = 3;
int32 alTtwg = 4;
string apcAtpmEndDt = 5;
string apcAtpmStrtDt = 6;
string apcCd = 7;
string arvlDt = 8;
string bfBnbnCmdtWrhsCd = 9;
string bfDtlDcshDt = 10;
string bfDtlDcshNo = 11;
string bfPdlsNo = 12;
string blDt = 13;
string blNo = 14;
string bnbnCmdtWrhsCd = 15;
string brndNm = 16;
string cagMgmtNo = 17;
string cmdtClsfSpelCd = 18;
string cmdtStgeLoctCd = 19;
string cntrCagYn = 20;
int32 cntrGcnt = 21;
string createdAt = 22;
string csclPlnCd = 23;
string csmCntyCd = 24;
string dcerCd = 25;
string dcerWrteCn = 26;
string dclrCstmCd = 27;
string dclrPtCd = 28;
string dcrdYn = 29;
string dcshFmCd = 30;
string delYn = 31;
string deptCd = 32;
string disprCd = 33;
string divdCsclTpCd = 34;
string divdFfmnTpCd = 35;
string dlngCond1Cd = 36;
string dlngCond2Cd = 37;
string dlngPdlsNm = 38;
string dlngPymnMeanCd = 39;
string dlvrCondCd = 40;
string dlvrPlcCd = 41;
string dstnCntyCd = 42;
string dstnRegnCd = 43;
string dtlDcshNo = 44;
string epcCd = 45;
string expCntyCd = 46;
string exppnCmrcRegsNo = 47;
string exppnIdfyNo = 48;
string exppnIdfyNoTpCd = 49;
string frstDclrDt = 50;
string frstRegstId = 51;
string frstRgsrDttm = 52;
string hsCd = 53;
string hsErrPvntVal = 54;
string hsExcpMtrCd = 55;
string id = 56;
string imppnCmrcRegsNo = 57;
string imppnIdfyNo = 58;
string imppnIdfyNoTpCd = 59;
string invcNo = 60;
string invcPblsDt = 61;
string lastChgDttm = 62;
string lastChprId = 63;
string lastYn = 64;
string ldnpCd = 65;
string ldunDt = 66;
int32 mdfyDgcnt = 67;
string mdfyRsnCd = 68;
string mdfyRsnCn = 69;
string mgDscnApreNo = 70;
string nwprScarCmdtCd = 71;
string oilTankNo = 72;
string orcyCntyCd = 73;
string owhsPrcEvYn = 74;
string pckgDesc = 75;
string pckgShmrMarkNo = 76;
int32 pckgTgcnt = 77;
string pdlsClsfBfhnJdgnPn = 78;
int32 pdlsGcnt = 79;
string pdlsNm = 80;
string pdlsNo = 81;
int32 pdlsNtwg = 82;
int32 pdlsPckgGcnt = 83;
string pdlsPckgUtCd = 84;
int32 pdlsTtwg = 85;
string prcDcshWrteYn = 86;
string prcDtrmMeanCd = 87;
string prhbCmdtCd = 88;
string prmsntDt = 89;
string prmsntSttsCd = 90;
string prvlCd = 91;
int32 psmgtFfmnXpirPrid = 92;
string psnrPrcsCn = 93;
string psnrReffNo = 94;
string pymnAcNo = 95;
string pymnBnkBrnhCd = 96;
string pymnBnkCd = 97;
string pymnMeanCd = 98;
string qtaApreNo = 99;
int32 qty = 100;
string qtyUtCd = 101;
string refNo = 102;
string reffNo = 103;
string regmRqstCd = 104;
int32 rethink = 105;
string rlbrCstmCd = 106;
string rqstDt = 107;
string shipNm = 108;
int32 sysUseSs = 109;
string trdeDlngCntyCd = 110;
string trifBaseVal = 111;
string trnpMethIdfyNo = 112;
string trnpMethKndCd = 113;
string trnpMethNatCd = 114;
string txprCmrcRegsNo = 115;
string txprIdfyNo = 116;
string updatedAt = 117;
string uprPdlsNo = 118;
string vhclYn = 119;
string wkngPtCd = 120;
};
message ClearanceDeclarationUpdateInput {
int32 aditTxQty = 1;
string aditTxQtyUtCd = 2;
int32 alNtwg = 3;
int32 alTtwg = 4;
string apcAtpmEndDt = 5;
string apcAtpmStrtDt = 6;
string apcCd = 7;
string arvlDt = 8;
string bfBnbnCmdtWrhsCd = 9;
string bfDtlDcshDt = 10;
string bfDtlDcshNo = 11;
string bfPdlsNo = 12;
string blDt = 13;
string blNo = 14;
string bnbnCmdtWrhsCd = 15;
string brndNm = 16;
string cagMgmtNo = 17;
string cmdtClsfSpelCd = 18;
string cmdtStgeLoctCd = 19;
string cntrCagYn = 20;
int32 cntrGcnt = 21;
string createdAt = 22;
string csclPlnCd = 23;
string csmCntyCd = 24;
string dcerCd = 25;
string dcerWrteCn = 26;
string dclrCstmCd = 27;
string dclrPtCd = 28;
string dcrdYn = 29;
string dcshFmCd = 30;
string delYn = 31;
string deptCd = 32;
string disprCd = 33;
string divdCsclTpCd = 34;
string divdFfmnTpCd = 35;
string dlngCond1Cd = 36;
string dlngCond2Cd = 37;
string dlngPdlsNm = 38;
string dlngPymnMeanCd = 39;
string dlvrCondCd = 40;
string dlvrPlcCd = 41;
string dstnCntyCd = 42;
string dstnRegnCd = 43;
string dtlDcshNo = 44;
string epcCd = 45;
string expCntyCd = 46;
string exppnCmrcRegsNo = 47;
string exppnIdfyNo = 48;
string exppnIdfyNoTpCd = 49;
string frstDclrDt = 50;
string frstRegstId = 51;
string frstRgsrDttm = 52;
string hsCd = 53;
string hsErrPvntVal = 54;
string hsExcpMtrCd = 55;
string id = 56;
string imppnCmrcRegsNo = 57;
string imppnIdfyNo = 58;
string imppnIdfyNoTpCd = 59;
string invcNo = 60;
string invcPblsDt = 61;
string lastChgDttm = 62;
string lastChprId = 63;
string lastYn = 64;
string ldnpCd = 65;
string ldunDt = 66;
int32 mdfyDgcnt = 67;
string mdfyRsnCd = 68;
string mdfyRsnCn = 69;
string mgDscnApreNo = 70;
string nwprScarCmdtCd = 71;
string oilTankNo = 72;
string orcyCntyCd = 73;
string owhsPrcEvYn = 74;
string pckgDesc = 75;
string pckgShmrMarkNo = 76;
int32 pckgTgcnt = 77;
string pdlsClsfBfhnJdgnPn = 78;
int32 pdlsGcnt = 79;
string pdlsNm = 80;
string pdlsNo = 81;
int32 pdlsNtwg = 82;
int32 pdlsPckgGcnt = 83;
string pdlsPckgUtCd = 84;
int32 pdlsTtwg = 85;
string prcDcshWrteYn = 86;
string prcDtrmMeanCd = 87;
string prhbCmdtCd = 88;
string prmsntDt = 89;
string prmsntSttsCd = 90;
string prvlCd = 91;
int32 psmgtFfmnXpirPrid = 92;
string psnrPrcsCn = 93;
string psnrReffNo = 94;
string pymnAcNo = 95;
string pymnBnkBrnhCd = 96;
string pymnBnkCd = 97;
string pymnMeanCd = 98;
string qtaApreNo = 99;
int32 qty = 100;
string qtyUtCd = 101;
string refNo = 102;
string reffNo = 103;
string regmRqstCd = 104;
int32 rethink = 105;
string rlbrCstmCd = 106;
string rqstDt = 107;
string shipNm = 108;
int32 sysUseSs = 109;
string trdeDlngCntyCd = 110;
string trifBaseVal = 111;
string trnpMethIdfyNo = 112;
string trnpMethKndCd = 113;
string trnpMethNatCd = 114;
string txprCmrcRegsNo = 115;
string txprIdfyNo = 116;
string updatedAt = 117;
string uprPdlsNo = 118;
string vhclYn = 119;
string wkngPtCd = 120;
};
message findManyParams {

};